<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_app">
    
	    <RelativeLayout
	        android:id="@+id/layout_PostDetailsheader" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/property_details_bar"
	        android:layout_alignParentTop="true">
	       
	     <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/back_button_navbar"
	        android:layout_alignParentLeft="true"
	        android:layout_margin="8dp"
	        android:onClick="onBack"/>
             
	    <ImageView
	        android:id="@+id/heder_ForgotPass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/post_black_button_navbar"
	        android:layout_alignParentRight="true"
	        android:layout_margin="8dp"
	        android:onClick="onPost"/>
	    </RelativeLayout>
	    
	    <LinearLayout  
	        android:id="@+id/layout_Location_Details_Contact"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/layout_PostDetailsheader"
		    android:orientation="horizontal">
		    
	       
	         <ImageView
	            android:id="@+id/btn_Location"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/location_paid"
	        	android:layout_margin="5dp"
	        	android:onClick="onLocationDetails"/>
	         
	         <ImageView
	            android:id="@+id/btn_Details"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/details"
	        	android:layout_margin="5dp"
	        	android:onClick="onPostDetails"/>
	         
	         <ImageView
	            android:id="@+id/btn_Picture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/process_tab_withdata4"
	        	android:layout_margin="5dp"
	        	android:onClick="onPicture"/>
	         </LinearLayout>
	    
	    <ScrollView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:scrollbars="none" 
	        android:layout_below="@+id/layout_Location_Details_Contact"
	        android:layout_above="@+id/img_infi">
	        
	    <RelativeLayout  
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:layout_marginBottom="5dp">
		    
	   	    

	            <RelativeLayout
	                android:id="@+id/layout_step3"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:orientation="vertical">

	                <TextView
	                    android:id="@+id/txt_VerificationCodeStep3"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="30dp"
	                    android:textColor="@android:color/black"
	                    android:text="@string/txt_provide_details_address"/>

	                <EditText
	                    android:id="@+id/edt_societyName"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_socityname"
	                    android:inputType="text"
	                    android:singleLine="true"
	                    android:layout_below="@+id/txt_VerificationCodeStep3" />

	                <EditText
	                    android:id="@+id/edt_flatNo"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_flatno"
	                    android:inputType="number"
	                    android:singleLine="true"
	                    android:layout_below="@+id/edt_societyName"/>

	                <EditText
	                    android:id="@+id/edt_laneZipCode"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_lanezip"
	                    android:inputType="number"
	                    android:singleLine="true"
	                    android:layout_below="@+id/edt_flatNo" />

	                <EditText
	                    android:id="@+id/edt_nearestland"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_nearestlandmark"
	                    android:inputType="text"
	                    android:singleLine="true" 
	                    android:layout_below="@+id/edt_laneZipCode"/>

	                 <EditText
	                    android:id="@+id/edt_states"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_state"
	                    android:inputType="text"
	                    android:singleLine="true" 
	                    android:layout_below="@+id/edt_nearestland"/>
	                
	                  <EditText
	                    android:id="@+id/edt_anythingsElse"
	                    android:layout_width="fill_parent"
	                    android:layout_height="45dp"
	                    android:layout_marginBottom="20dp"
	                    android:layout_marginLeft="30dp"
	                    android:layout_marginRight="30dp"
	                    android:layout_marginTop="10dp"
	                    android:background="@drawable/edit_textstyle"
	                    android:hint="@string/hint_nearestlandmark"
	                    android:inputType="none"
	                    android:singleLine="true" 
	                    android:layout_below="@+id/edt_states"/>
	                 
	            </RelativeLayout>
	            
	            
	       </RelativeLayout>
	    </ScrollView>

	
</RelativeLayout>